// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: AvatarName matches snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  gap: 8px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0 0 28px;
  -ms-flex: 0 0 28px;
  flex: 0 0 28px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  white-space: nowrap;
  overflow: hidden;
  text-align: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #4092CD;
}

.emotion-3 {
  display: inline-block;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  height: 1lh;
  letter-spacing: 0;
  line-height: 1lh;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  letter-spacing: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  height: 1lh;
  line-height: 1lh;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  white-space: normal;
  overflow-wrap: anywhere;
}

<a
  aria-label={null}
  aria-labelledby={null}
  data-mui-internal-clone-element={true}
  href="/accounts/123"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <span
    className="emotion-0"
  >
    <div
      address="123"
      className="emotion-1"
      id="Avatar"
    />
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      />
      <span
        className="emotion-4"
      >
        name
      </span>
    </span>
  </span>
</a>
`;

exports[`component: AvatarName matches snapshot with imageUrl 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  gap: 8px;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

.emotion-0:hover {
  cursor: pointer;
}

.emotion-1 {
  -webkit-flex: 0 0 28px;
  -ms-flex: 0 0 28px;
  flex: 0 0 28px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-flow: row nowrap;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  white-space: nowrap;
  overflow: hidden;
  text-align: left;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #4092CD;
}

.emotion-3 {
  display: inline-block;
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  height: 1lh;
  letter-spacing: 0;
  line-height: 1lh;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  letter-spacing: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  height: 1lh;
  line-height: 1lh;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  white-space: normal;
  overflow-wrap: anywhere;
}

<a
  aria-label={null}
  aria-labelledby={null}
  data-mui-internal-clone-element={true}
  href="/accounts/123"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
>
  <span
    className="emotion-0"
  >
    <div
      address="123"
      className="emotion-1"
      id="Avatar"
      imageUrl="https://s3.amazonaws.com/keybase_processed_uploads/f5b0771af36b2e3d6a196a29751e1f05_360_360.jpeg"
    />
    <span
      className="emotion-2"
    >
      <span
        className="emotion-3"
      />
      <span
        className="emotion-4"
      >
        name
      </span>
    </span>
  </span>
</a>
`;
